# llm-templated-coding

./: .gitignore  Cargo.toml  Makefile  README.md
include/: common.md
instruct/: llm-claude.txt  llm-gemini.txt  llm-groq.txt  llm-ollama-qwen.txt
src/: main.rs
